<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="twp">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="percent">%</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="squareRoot">\u221A</string>
    <string name="multiplication">\u00D7</string>
    <string name="division">\u00F7</string>
    <string name="sign">\u00B1</string>
</resources>