<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideWest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="31dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideNorth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideSouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_end="33dp" />

    <TextView
        android:id="@+id/output"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="clip_vertical|end"
        android:tag="output"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/guideWest"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideEast"
        app:layout_constraintTop_toTopOf="@+id/guideNorth"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btn7"
        android:text="@string/seven"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideEast"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btn8"
        android:text="@string/eight"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btn9"
        android:text="@string/nine"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/btnsqrt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnsqrt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btnsqrt"
        android:text="@string/squareRoot"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btndivide"
        app:layout_constraintEnd_toStartOf="@+id/btnclear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnclear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btnclear"
        android:text="@string/clear"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnpercent"
        app:layout_constraintEnd_toStartOf="@+id/guideWest"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnsqrt"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btn4"
        android:text="@string/four"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideEast"
        app:layout_constraintTop_toBottomOf="@+id/btn7"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btn5"
        android:text="@string/five"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn8"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btn6"
        android:text="@string/six"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn3"
        app:layout_constraintEnd_toStartOf="@+id/btndivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn9"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btndivide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btndivide"
        android:text="@string/division"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnmultiply"
        app:layout_constraintEnd_toStartOf="@+id/btnpercent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btnsqrt"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnpercent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btnpercent"
        android:text="@string/percent"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnminus"
        app:layout_constraintEnd_toStartOf="@+id/guideWest"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btndivide"
        app:layout_constraintTop_toBottomOf="@+id/btnclear"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btn1"
        android:text="@string/one"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnsign"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideEast"
        app:layout_constraintTop_toBottomOf="@+id/btn4"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btn3"
        android:text="@string/three"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btndecimal"
        app:layout_constraintEnd_toStartOf="@+id/btnmultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn6"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnmultiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btnmultiply"
        android:text="@string/multiplication"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnplus"
        app:layout_constraintEnd_toStartOf="@+id/btnminus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btndivide"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnminus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btnminus"
        android:text="@string/minus"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnequals"
        app:layout_constraintEnd_toStartOf="@+id/guideWest"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnmultiply"
        app:layout_constraintTop_toBottomOf="@+id/btnpercent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:tag="btn2"
        android:text="@string/twp"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn5"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnsign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:tag="btnsign"
        android:text="@string/sign"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideSouth"
        app:layout_constraintEnd_toStartOf="@+id/btn0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideEast"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:tag="btn0"
        android:text="@string/zero"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideSouth"
        app:layout_constraintEnd_toStartOf="@+id/btndecimal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnsign"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btndecimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:tag="btndecimal"
        android:text="@string/decimal"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideSouth"
        app:layout_constraintEnd_toStartOf="@+id/btnplus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnplus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:tag="btnplus"
        android:text="@string/plus"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideSouth"
        app:layout_constraintEnd_toStartOf="@+id/btnequals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btndecimal"
        app:layout_constraintTop_toBottomOf="@+id/btnmultiply"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnequals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:tag="btnequals"
        android:text="@string/equals"
        android:textSize="14sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideSouth"
        app:layout_constraintEnd_toStartOf="@+id/guideWest"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnplus"
        app:layout_constraintTop_toBottomOf="@+id/btnminus"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>